# SurferBro

./: .gitignore  CONTRIBUTING.md  FINAL_COMPLETE_TEST.py  FIXES_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_COMPLETE.md  LICENSE  NO_EVAL_TRAINING.md  QUICKSTART.md  QUICK_START_COMMANDS.md  QUICK_WAVE_TEST.py  README.md  REPO_CLEANUP_SUMMARY.md  STOP_TRAINING.md  TEST_ANGLED_WAVES.py  VERIFY_COORDINATE_SYSTEM.py  WAVE_CATCHING_DESIGN.md  config.yaml  play_manual.py  pyproject.toml  quick_train_log.txt  realistic_test_log.txt  requirements.txt  super_quick_demo.sh  test_all_new_mechanics.py  test_training.py  test_wave_mechanics.py  test_wave_solutions.py  train_surferbro.py  training_analysis.csv  verify_installation.py
assets/css/: oceanscope.css
assets/js/: oceanscope.js
assets/templates/: oceanscope.html
docs/: FINAL_IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  PROJECT_OVERVIEW.md  PROPOSED_REALISTIC_MECHANICS.md  TRAINING_GUIDE.md
examples/: basic_training.py  compare_trained_vs_random.py  debug_environment.py  design_ocean.py  minimal_test.py  quick_demo.py  test_environment.py  test_fixed_visualization.py  test_with_proper_ocean.py  ultra_fast_demo.py  ultra_fast_demo_v2.py  watch_model.py  watch_v2_model.py
ocean_designs/: example_simple.json
scripts/: test_duck_dive_escape.py
scripts/old_tests/: COMPLETE_QUICK_DEMO.py  DEBUG_MOVEMENT.py  FAST_LEARNING_TEST.py  FINAL_REALISTIC_TEST.py  QUICK_FIX_TEST.py  QUICK_TRAIN_TEST.py  TEST_WAVE_FRONTS.py  TRAIN_PROPERLY.sh  quick_demo.sh  train_custom_ocean.sh
surferbro/: __init__.py
surferbro/agents/: __init__.py  surfer_agent.py
surferbro/environments/: __init__.py  jellyfish.py  surf_env.py  surfer.py
surferbro/oceanscope/: __init__.py  __main__.py  app.py  mesh_converter.py
surferbro/physics/: __init__.py  ocean_floor.py  wave_simulator.py
surferbro/training/: __init__.py  (+4 more)
tests/: __init__.py  test_environment.py  test_physics.py  test_surfer.py
(+5 files in other folders)
